--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If your love for guitar and basketball is filling you with excitement...</h3>
-      <p class="contact-para">Feel free to contact me using the links below and we'll set up a friendly basketball match your team vs my team 😉</p>
-      <a href="mailto:name@email.com" class="BUTTON_JTH">CONTACT ME</a>
+      <p class="contact-para">Feel free to contact me using the links below </p>
+      <a href="mailto:vikramshenoy14@email.com" class="BUTTON_JTH">CONTACT ME</a>
     </div>
   </div>
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p class="end-card">© 2021 Vikram Shenoy</p>
+    <a class="footer-link" href="https://www.linkedin.com/in/vikram-shenoy-48871717a/">LinkedIn</a>
+    <a class="footer-link" href="https://www.hackerrank.com/vikramshenoy_is1">HackerRank</a>
+    <a class="footer-link" href="https://leetcode.com/vikram_shen/">LeetCode</a>
+    <p class="end-card">© 2022 Vikram Shenoy</p>
   </div>
 </body>
 
