--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/vikram-shenoy-48871717a/">LinkedIn</a>
-    <a class="footer-link" href="https://www.hackerrank.com/vikramshenoy_is1">HackerRank</a>
-    <a class="footer-link" href="https://leetcode.com/vikram_shen/">LeetCode</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/vikram-shenoy-48871717a/" target = "_blank">LinkedIn</a>
+    <a class="footer-link" href="https://www.hackerrank.com/vikramshenoy_is1" target = "_blank">HackerRank</a>
+    <a class="footer-link" href="https://leetcode.com/vikram_shen/" target = "_blank">LeetCode</a>
     <p class="end-card">© 2022 Vikram Shenoy</p>
   </div>
 </body>
