Playing around with old code, still don't know how to center a div

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="top">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Vikram</h1>
-    <h2>a learner.</h2>
+    <h2>Scale Mountains</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img class="mountain" src="images/mountain.png" alt="<mountain></mountain>-img">
   </div>
@@ -22,9 +22,9 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="images/man.png" height="180" alt="candid-white-guy">
+        <img src="images/man.png" height="180" alt="vikram-shenoy">
       <h2>Hello.</h2>
-      <p>I am a student at RV university. Studying Information Science and Engineering.</p>
+      <p>I am a Product Engineer at o9 solutions, with 2+ years of experience working with engineers across departments such as R&D, Marketing, Product and Customer Success.</p>
     </div>
     <hr>
     <div class="skills">
@@ -53,10 +53,10 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/vikram-shenoy-48871717a/" target = "_blank">LinkedIn</a>
-    <a class="footer-link" href="https://www.hackerrank.com/vikramshenoy_is1" target = "_blank">HackerRank</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/vikram-shen/" target = "_blank">LinkedIn</a>
+    <a class="footer-link" href="https://github.com/Vikram-Shenoy" target = "_blank">GitHub</a>
     <a class="footer-link" href="https://leetcode.com/vikram_shen/" target = "_blank">LeetCode</a>
-    <p class="end-card">© 2022 Vikram Shenoy</p>
+    <p class="end-card">© 2025 Vikram Shenoy</p>
   </div>
 </body>
 
